--- a/index.ipynb
+++ b/index.ipynb
@@ -211,14 +211,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7285553335"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "phone_num_one = \"7285553334\" # 7285553335\n",
-    "new_number = phone_num_one + 1"
+    "new_number = int(phone_num_one) + 1\n",
+    "new_number"
    ]
   },
   {
