--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,8 @@
    "outputs": [],
    "source": [
     "phone_num_two = \"7285553334\" # 7285553336\n",
-    "phone_num_two"
+    "phone_num_twonew_number = int(phone_num_one) + 1\n",
+    "new_number"
    ]
   },
   {
