--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,7 @@
    "outputs": [],
    "source": [
     "phone_num_two = \"7285553334\" # 7285553336\n",
-    "new_number2phone_num_two ="
+    "new_number2 = int(phone_num_two)  ="
    ]
   },
   {
