--- a/index.ipynb
+++ b/index.ipynb
@@ -233,14 +233,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "phone_num_two = \"7285553334\" # 7285553336\n",
-    "new_number2 = int(phone_num_two)  ="
+    "new_number2 = int(phone_num_two) +2\n",
+    "new_number "
    ]
   },
   {
