--- a/index.ipynb
+++ b/index.ipynb
@@ -233,13 +233,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7285553336"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "phone_num_two = \"7285553334\" # 7285553336\n",
     "new_number2 = int(phone_num_two) +2\n",
-    "new_number "
+    "new_number2"
    ]
   },
   {
